--- a/app/events/views/event-details.component.html
+++ b/app/events/views/event-details.component.html
@@ -19,11 +19,11 @@
     </tr>
     <tr>
         <th>Start Date</th>
-        <td><span [innerText]="event.startDate | date:'medium'"></span></td>
+        <td><span [innerText]="event.startDate"></span></td>
     </tr>
     <tr>
         <th>End Date</th>
-        <td><span [innerText]="event.endDate | date:'medium'"></span></td>
+        <td><span [innerText]="event.endDate"></span></td>
     </tr>
     <tr>
         <th>Fees</th>
